latest code updates

--- a/about.html
+++ b/about.html
@@ -510,6 +510,19 @@
         </div>
     </section>
 
+    <section class="founder-section" style="padding-top: 0; padding-bottom: 60px;">
+        <div class="container">
+            <div class="founder-card" style="text-align: center;">
+                <div class="founder-image">
+                    <i class="fas fa-users"></i>
+                </div>
+                <h3>Team Sandhanam</h3>
+                <p class="position">Collaborating Club</p>
+                <p>"This platform has also been proudly built in collaboration with Team Sandhanam. Their support, creativity, and dedication have been instrumental in shaping Academic Aid into what it is today. We are grateful for their contribution and continued partnership in empowering students."</p>
+            </div>
+        </div>
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
