--- a/resources.html
+++ b/resources.html
@@ -232,7 +232,7 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+   <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
                 <div class="logo-icon">
@@ -245,10 +245,19 @@
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="#">Resources</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contactus.html">Contact Us</a></li>
+                    
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contactus.html">Contact Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="privacy.html">Privacy Policy</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="terms.html">Terms & Conditions</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -268,7 +277,7 @@
                         </p>
 
                         <div class="qr-box">
-                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSecWZg2pwTmGds6Ntu2UMJyx1ypJworFBN7N7UUQWsOCwr1jA/viewform?usp=dialog" target="_blank">
+                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSd1Fp6oemfDU8yIb5Hn861Yg2Lig9WXv0KG3of9fyrLHb3Mhw/viewform?usp=publish-editor" target="_blank">
                                 <img src="form.png" alt="Scan to Upload" class="qr-image">
                             </a>
                         </div>
