--- a/cse/study.html
+++ b/cse/study.html
@@ -295,7 +295,7 @@
     
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="/index.html">
                 <div class="logo-icon">
                     <i class="fas fa-graduation-cap"></i>
                 </div>
@@ -313,7 +313,7 @@
                         <a class="nav-link" href="/about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact Us</a>
+                        <a class="nav-link" href="/contactus.html">Contact Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/privacy.html">Privacy Policy</a>
