--- a/about.html
+++ b/about.html
@@ -518,7 +518,7 @@
                 </div>
                 <h3>Team Sandhanam</h3>
                 <p class="position">Collaborating Club</p>
-                <p>"This platform has also been proudly built in collaboration with Team Sandhanam. Their support, creativity, and dedication have been instrumental in shaping Academic Aid into what it is today. We are grateful for their contribution and continued partnership in empowering students."</p>
+                <p>"We are proud to have collaborated in building this platform alongside Academic Aid. Our team’s support, creativity, and dedication have played a key role in shaping it into what it is today. We are grateful for this partnership and remain committed to empowering students through continued innovation and collaboration."</p>
             </div>
         </div>
     </section>
