--- a/about.html
+++ b/about.html
@@ -321,6 +321,115 @@
             font-style: italic;
         }
 
+        /* Team Members Section */
+        .team-section {
+            padding: 0 0 80px;
+        }
+
+        .team-section .section-title {
+            font-size: 2rem;
+            margin-bottom: 40px;
+        }
+
+        .team-member-card {
+            background: #ffffff;
+            border: 1px solid #e2e8f0;
+            border-radius: 24px;
+            padding: 40px 30px;
+            text-align: center;
+            transition: all 0.4s ease;
+            height: 100%;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .team-member-card::after {
+            content: '';
+            position: absolute;
+            bottom: 0; left: 0; right: 0;
+            height: 4px;
+            background: linear-gradient(90deg, #3b82f6, #7c3aed, #2563eb);
+            transform: scaleX(0);
+            transform-origin: left;
+            transition: transform 0.4s ease;
+        }
+
+        .team-member-card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 20px 50px rgba(37, 99, 235, 0.15);
+            border-color: #3b82f6;
+        }
+
+        .team-member-card:hover::after {
+            transform: scaleX(1);
+        }
+
+        .team-avatar {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            margin: 0 auto 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 2.2rem;
+            font-weight: 800;
+            color: #fff;
+            letter-spacing: 1px;
+            box-shadow: 0 10px 30px rgba(37, 99, 235, 0.3);
+            position: relative;
+        }
+
+        .avatar-1 { background: linear-gradient(135deg, #3b82f6 0%, #1d4ed8 100%); }
+        .avatar-2 { background: linear-gradient(135deg, #7c3aed 0%, #5b21b6 100%); box-shadow: 0 10px 30px rgba(124, 58, 237, 0.3); }
+        .avatar-3 { background: linear-gradient(135deg, #0891b2 0%, #0e7490 100%); box-shadow: 0 10px 30px rgba(8, 145, 178, 0.3); }
+
+        .team-member-card h4 {
+            font-size: 1.35rem;
+            font-weight: 700;
+            color: #1e293b;
+            margin-bottom: 6px;
+        }
+
+        .team-role-badge {
+            display: inline-block;
+            background: linear-gradient(135deg, #eff6ff, #dbeafe);
+            color: #2563eb;
+            font-size: 0.8rem;
+            font-weight: 600;
+            padding: 5px 16px;
+            border-radius: 20px;
+            border: 1px solid #bfdbfe;
+            margin-bottom: 18px;
+            letter-spacing: 0.5px;
+            text-transform: uppercase;
+        }
+
+        .team-member-card p {
+            font-size: 0.95rem;
+            color: #64748b;
+            line-height: 1.7;
+            margin: 0;
+        }
+
+        .team-divider {
+            display: flex;
+            align-items: center;
+            gap: 15px;
+            margin: 20px 0 40px;
+        }
+
+        .team-divider span {
+            height: 2px;
+            flex: 1;
+            background: linear-gradient(90deg, transparent, #e2e8f0, transparent);
+        }
+
+        .team-divider i {
+            color: #3b82f6;
+            font-size: 1.2rem;
+        }
+
         @media (max-width: 768px) {
             .about-hero h1 { font-size: 2.5rem; }
             .section-title { font-size: 2rem; }
@@ -504,6 +613,23 @@
                 </div>
                 <h3>Aryan Verma</h3>
                 <p class="position">Founder & Community Lead</p>
+
+                <!-- Team Names -->
+                <div style="display: flex; justify-content: center; flex-wrap: wrap; gap: 16px; margin: 20px 0 30px;">
+                    <div style="background: linear-gradient(135deg, #eff6ff, #dbeafe); border: 1.5px solid #bfdbfe; border-radius: 50px; padding: 10px 26px; display: flex; align-items: center; gap: 10px;">
+                        <div style="width: 38px; height: 38px; background: linear-gradient(135deg, #3b82f6, #1d4ed8); border-radius: 50%; display: flex; align-items: center; justify-content: center; color: #fff; font-weight: 700; font-size: 0.85rem; flex-shrink: 0;">SS</div>
+                        <span style="font-weight: 700; color: #1e293b; font-size: 1rem;">Sachin Sharma</span>
+                    </div>
+                    <div style="background: linear-gradient(135deg, #f5f3ff, #ede9fe); border: 1.5px solid #ddd6fe; border-radius: 50px; padding: 10px 26px; display: flex; align-items: center; gap: 10px;">
+                        <div style="width: 38px; height: 38px; background: linear-gradient(135deg, #7c3aed, #5b21b6); border-radius: 50%; display: flex; align-items: center; justify-content: center; color: #fff; font-weight: 700; font-size: 0.85rem; flex-shrink: 0;">GS</div>
+                        <span style="font-weight: 700; color: #1e293b; font-size: 1rem;">Gavendra Singh</span>
+                    </div>
+                    <div style="background: linear-gradient(135deg, #ecfeff, #cffafe); border: 1.5px solid #a5f3fc; border-radius: 50px; padding: 10px 26px; display: flex; align-items: center; gap: 10px;">
+                        <div style="width: 38px; height: 38px; background: linear-gradient(135deg, #0891b2, #0e7490); border-radius: 50%; display: flex; align-items: center; justify-content: center; color: #fff; font-weight: 700; font-size: 0.85rem; flex-shrink: 0;">AK</div>
+                        <span style="font-weight: 700; color: #1e293b; font-size: 1rem;">Alok Ranjan Kumar</span>
+                    </div>
+                </div>
+
                 <p>"Thank you for choosing Academic Aid as your learning partner. We are committed to providing you with the best possible learning experience and creating an environment that fosters growth, collaboration, and success. Together, we can achieve excellence and make your academic journey truly remarkable. We look forward to supporting you every step of the way."</p>
                 <p style="margin-top: 25px; font-style: normal; font-weight: 600; color: #1e293b;">Best Wishes,<br>The Academic Aid Team</p>
             </div>
@@ -518,6 +644,22 @@
                 </div>
                 <h3>Team Sandhanam</h3>
                 <p class="position">Collaborating Club</p>
+
+                <div style="display: flex; justify-content: center; flex-wrap: wrap; gap: 16px; margin: 20px 0 30px;">
+                    <div style="background: linear-gradient(135deg, #eff6ff, #dbeafe); border: 1.5px solid #bfdbfe; border-radius: 50px; padding: 10px 26px; display: flex; align-items: center; gap: 10px;">
+                        <div style="width: 38px; height: 38px; background: linear-gradient(135deg, #3b82f6, #1d4ed8); border-radius: 50%; display: flex; align-items: center; justify-content: center; color: #fff; font-weight: 700; font-size: 0.85rem; flex-shrink: 0;">AD</div>
+                        <span style="font-weight: 700; color: #1e293b; font-size: 1rem;">Abhinav Dubey</span>
+                    </div>
+                    <div style="background: linear-gradient(135deg, #f5f3ff, #ede9fe); border: 1.5px solid #ddd6fe; border-radius: 50px; padding: 10px 26px; display: flex; align-items: center; gap: 10px;">
+                        <div style="width: 38px; height: 38px; background: linear-gradient(135deg, #7c3aed, #5b21b6); border-radius: 50%; display: flex; align-items: center; justify-content: center; color: #fff; font-weight: 700; font-size: 0.85rem; flex-shrink: 0;">VG</div>
+                        <span style="font-weight: 700; color: #1e293b; font-size: 1rem;">Vedansh Govind</span>
+                    </div>
+                    <div style="background: linear-gradient(135deg, #ecfeff, #cffafe); border: 1.5px solid #a5f3fc; border-radius: 50px; padding: 10px 26px; display: flex; align-items: center; gap: 10px;">
+                        <div style="width: 38px; height: 38px; background: linear-gradient(135deg, #0891b2, #0e7490); border-radius: 50%; display: flex; align-items: center; justify-content: center; color: #fff; font-weight: 700; font-size: 0.85rem; flex-shrink: 0;">BR</div>
+                        <span style="font-weight: 700; color: #1e293b; font-size: 1rem;">Bhaumik Rana</span>
+                    </div>
+                </div>
+
                 <p>"We are proud to have collaborated in building this platform. Our team’s support, creativity, and dedication have played a key role in shaping it into what it is today. We are grateful for this partnership and remain committed to empowering students through continued innovation and collaboration."</p>
             </div>
         </div>
