--- a/cse/study.html
+++ b/cse/study.html
@@ -336,6 +336,7 @@
             <button class="semester-btn" onclick="changeSemester(3)">Semester 3</button>
             <button class="semester-btn" onclick="changeSemester(4)">Semester 4</button>
             <button class="semester-btn" onclick="changeSemester(5)">Semester 5</button>
+            <button class="semester-btn" onclick="changeSemester(6)">Semester 6</button>
         </div>
 
         
@@ -490,6 +491,28 @@
                     title: "6. AEC",
                     link: ""
                 }
+            ],
+            6: [
+                {
+                    title: "1. Cybersecurity (DSC-16)",
+                    link: "https://drive.google.com/drive/folders/1Xtf0UwGGDnUdMdqVkclkR0rQWta6vvjp"
+                },
+                {
+                    title: "2. Cloud Computing (DSC-17)",
+                    link: "https://drive.google.com/drive/folders/1po-2hGdOHA2D0xpEy22RRE1Txi8S7H2w"
+                },
+                {
+                    title: "3. Software Project Management (DSC-18)",
+                    link: "https://drive.google.com/drive/folders/1XnkMbmC2FeZC6VKxYpw8OzmnUiYjAQQ9"
+                },
+                {
+                    title: "4. Specialization (Parent)/Minor (Other)(DSE-4)",
+                    link: ""
+                },
+                {
+                    title: "5. GE(6)",
+                    link: ""
+                },
             ]
         };
 
