--- a/ece/study.html
+++ b/ece/study.html
@@ -337,6 +337,7 @@
             <button class="semester-btn" onclick="changeSemester(3)">Semester 3</button>
             <button class="semester-btn" onclick="changeSemester(4)">Semester 4</button>
             <button class="semester-btn" onclick="changeSemester(5)">Semester 5</button>
+            <button class="semester-btn" onclick="changeSemester(6)">Semester 6</button>
         </div>
 
         
@@ -491,6 +492,28 @@
                     title: "6. AEC",
                     link: "#"
                 }
+            ],
+            6: [
+                {
+                    title: "1. Hands-On CMOS VLSI Design (DSC-16)",
+                    link: "https://drive.google.com/drive/folders/1GRDc0M2LVzFaP381coLUG7kJ8DAbKg4K"
+                },
+                {
+                    title: "2. Embedded Systems and Applications (DSC-17)",
+                    link: "https://drive.google.com/drive/folders/1g6aLJBiLE7js-4GznCOd2j5o39RhjGPx"
+                },
+                {
+                    title: "3. Digital Communication Systems (DSC-18)",
+                    link: "https://drive.google.com/drive/folders/1s5hw1annSz5xKcyRZ3CrlZEJI6QK2t0-"
+                },
+                {
+                    title: "4. Specialization (Parent)/Minor (Other)(DSE-4)",
+                    link: ""
+                },
+                {
+                    title: "5. AVLSI(DSE-6)",
+                    link: "https://drive.google.com/drive/folders/1oJVSxTHTUpXaeDeVN0SaZnukg9UFvm_5"
+                },
             ]
         };
 
