--- a/ee/study.html
+++ b/ee/study.html
@@ -338,6 +338,7 @@
             <button class="semester-btn" onclick="changeSemester(3)">Semester 3</button>
             <button class="semester-btn" onclick="changeSemester(4)">Semester 4</button>
             <button class="semester-btn" onclick="changeSemester(5)">Semester 5</button>
+            <button class="semester-btn" onclick="changeSemester(6)">Semester 6</button>
 
         </div>
 
@@ -499,6 +500,28 @@
                 },
                 {
                     title: "6. AEC",
+                    link: ""
+                }
+            ],
+            6: [
+                {
+                    title: "1. Switchgear and Protection (DSC-16)",
+                    link: "https://drive.google.com/drive/folders/1t5bzH5a3eHLu1YTm0XwxZmfT3bcJfWPO"
+                },
+                {
+                    title: "2. Embedded System Technologies (DSC-17)",
+                    link: "https://drive.google.com/drive/folders/1t5bzH5a3eHLu1YTm0XwxZmfT3bcJfWPO"
+                },
+                {
+                    title: "3. Power Electronics (DSC-18)",
+                    link: "https://drive.google.com/drive/folders/1c_Ns4lcflK_f8kU5rIN5NcTaZJnYBJL9"
+                },
+                {
+                    title: "4. Specialization (Parent)/Minor (Other)(DSE-4)",
+                    link: ""
+                },
+                {
+                    title: "5. GE-6",
                     link: ""
                 }
             ]
