--- a/contactus.html
+++ b/contactus.html
@@ -47,6 +47,18 @@
             transition: all 0.3s ease;
             position: relative;
         }
+        .navbar-toggler {
+    border: 2px solid #2563eb !important;
+    padding: 6px 10px;
+    border-radius: 8px;
+}
+.navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='%232563eb' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2.5' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
+}
+.navbar-toggler:focus {
+    box-shadow: 0 0 0 3px rgba(37,99,235,0.2) !important;
+    outline: none;
+}
         .navbar-nav .nav-link:hover { color: #2563eb !important; transform: translateY(-2px); }
         .navbar-nav .nav-link::after {
             content: '';
@@ -150,6 +162,7 @@
             font-weight: 800;
             color: #2563eb;
             display: block;
+
         }
         .stat-item .lbl {
             font-size: 0.85rem;
