--- a/resources.html
+++ b/resources.html
@@ -38,6 +38,18 @@
             font-size: 1.5rem; color: #fff;
             box-shadow: 0 4px 15px rgba(37, 99, 235, 0.3);
         }
+        .navbar-toggler {
+    border: 2px solid #2563eb !important;
+    padding: 6px 10px;
+    border-radius: 8px;
+}
+.navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='%232563eb' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2.5' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
+}
+.navbar-toggler:focus {
+    box-shadow: 0 0 0 3px rgba(37,99,235,0.2) !important;
+    outline: none;
+}
         .navbar-nav .nav-link {
             color: #64748b !important;
             margin: 0 0.5rem;
